# Programmazione-Esame

esercitazione2/: CMakeLists.txt  alg.cpp  eser.cpp
esercitazione3/: CMakeLists.txt  prova.cpp  rational.hpp
esercitazione4/: cMakeLists.txt  measure_sorts.cpp  ordinamenti.hpp  randomfiller.cpp  test_bubble.cpp  test_insertionsort.cpp  test_selectionsort.cpp  utilizzo_AI.txt
